--- a/rbac-macro/Cargo.toml
+++ b/rbac-macro/Cargo.toml
@@ -3,6 +3,9 @@ name = "rbac-macro"
 version = "0.1.0"
 edition = "2021"
 authors = ["funcpp"]
+keywords = ["rbac"]
+license = "MIT"
+include = ["src/*.rs", "Cargo.toml"]
 
 [dependencies]
 quote = "1.0.37"
