--- a/rbac-macro/Cargo.toml
+++ b/rbac-macro/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "rbac-macro"
 version = "0.1.0"
+description = "rbca-macro"
+repository = "https://github.com/funcpp/rbac-rs"
 edition = "2021"
 authors = ["funcpp"]
 keywords = ["rbac"]
